[package]
name = "download_cli"
version = "0.2.0"
authors = ["Spxg <spxg@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["stream"] }
tokio = { version = "0.2", features = ["full"] }
positioned-io-preview = "0.3"
structopt = "0.3"
structopt-derive = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ctrlc = "3.1.4"
indicatif = "0.14.0"

[profile.release]
lto = "fat"